# MYwork

./: README.md
1.程序设计基础/: README.md  project.cpp  实验报告.docx  飞行棋打包程序.msi
2.高级程序设计/: README.md
2.高级程序设计/PA1/nit/: CMakeLists.txt  apis.cpp  apis.h  main.cpp  nit.cpp  nit.h  sha1.cpp  sha1.h
2.高级程序设计/PA2/RimWorld/: RimWorld.sln  RimWorld.vcxproj  main.cpp
2.高级程序设计/PA2/RimWorld/Debug/: vc140.idb
3.面向对象编程/: README.md
3.面向对象编程/PA1/FileSimulator/: FileSimulator.sln
3.面向对象编程/PA1/FileSimulator/FileSimulator/: FileSimulator.vcxproj  FileSimulator.vcxproj.filters
4.软件体系结构/: README.md
4.软件体系结构/SAwork01/s01-znz2004-main/: README.md  beans-alipay.yml  beans-circular.yml  beans-wechat.yml  container.py  decorators.py  exceptions.py  order_system.py  run_tests.py  test_container.py
4.软件体系结构/SAwork02/s02-znz2004-main/: README.md  aspects.py  command_shell.py  config-json.yml  container.py  decorators.py  exceptions.py  pos_system.py
4.软件体系结构/SAwork02/s02-znz2004-main/data/: __init__.py  json_repo.py  product_repo.py  transaction_repo.py
4.软件体系结构/SAwork02/s02-znz2004-main/result/: products.json  transactions.json
4.软件体系结构/SAwork03/s03-znz2004-main/: DESIGN.md  README.md  config.yml  main.py
4.软件体系结构/SAwork03/s03-znz2004-main/bookstore/: __init__.py  controllers.py  models.py  services.py
4.软件体系结构/SAwork03/s03-znz2004-main/framework/: __init__.py  (+8 more)
5.大数据处理实验/: README.md
5.大数据处理实验/hadoop-main/HADOOP/: pom.xml
6.毕业设计/: README.md
6.毕业设计/multispectral-yolov8/working/: command.txt  data.yaml  detect.py  detect_slim.py  merge_images.py  test.py  train.py
(+105 files in other folders)
